# Seaport_SO2

./: CMakeLists.txt  PortAdministrator.cpp  PortAdministrator.h  README.md  Seaport.cpp  Seaport.h  main.cpp
stoppingPlaces/: Dock.cpp  Dock.h  TruckParkingArea.cpp  TruckParkingArea.h
vehicles/: LoadStatus.h  Ship.cpp  Ship.h  Truck.cpp  Truck.h  Vehicle.cpp  Vehicle.h
view/: ConsoleView.cpp  ConsoleView.h  IView.h  NcursesView.cpp  NcursesView.h
